--- a/packages/vscode-backstage-entity/tsconfig.json
+++ b/packages/vscode-backstage-entity/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "ES2020",
     "lib": ["ES2020"],
     "sourceMap": true,
+    "types": ["node"],
     "rootDir": "src",
     "outDir": "out/client",
     "strict": true /* enable all strict type-checking options */
