corrects the mapping and improves the error messages for AJV errors
Signed-off-by: Aramis Sennyey <aramiss@spotify.com>

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.1",
   "description": "",
   "main": "src/index.ts",
-  "scripts": {},
   "author": "",
   "private": true,
   "license": "MIT",
@@ -12,5 +11,6 @@
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "packageManager": "yarn@4.0.0"
 }
