--- a/packages/backstage-entity-language-server/package.json
+++ b/packages/backstage-entity-language-server/package.json
@@ -10,9 +10,7 @@
   ],
   "main": "./out/server/index.js",
   "types": "./out/server/index.d.ts",
-  "bin": {
-    "backstage-entity-language-server": "./bin/backstage-entity-language-server"
-  },
+  "bin": "./bin/backstage-entity-language-server",
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -b",
@@ -20,7 +18,12 @@
     "lint": "eslint ./client/src ./server/src --ext .ts,.tsx"
   },
   "dependencies": {
+    "@backstage/catalog-model": "^1.4.3",
     "@flatten-js/interval-tree": "^1.1.1",
+    "ajv": "^8.12.0",
+    "ajv-error-mapping": "workspace:^",
+    "glob": "^10.3.10",
+    "json-schema-traverse": "^1.0.0",
     "lodash": "^4.17.21",
     "typescript": "^5.2.2",
     "vscode-languageserver": "^9.0.1",
