--- a/packages/backstage-entity-language-server/tsconfig.json
+++ b/packages/backstage-entity-language-server/tsconfig.json
@@ -1,15 +1,12 @@
 {
+  "extends": ["../../tsconfig.base.json"],
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "ES2020",
-    "lib": ["ES2020"],
-    "sourceMap": true,
     "rootDir": "src",
-    "outDir": "./out/server",
-    "strictNullChecks": false
+    "outDir": "./out/server"
     /* Additional Checks */
     // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
     // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
     // "noUnusedParameters": true,  /* Report errors on unused parameters. */
-  }
+  },
+  "references": [{ "path": "../ajv-error-mapping" }]
 }
