--- a/packages/vscode-backstage-entity/tsconfig.json
+++ b/packages/vscode-backstage-entity/tsconfig.json
@@ -1,9 +1,6 @@
 {
+  "extends": ["../../tsconfig.base.json"],
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "ES2020",
-    "lib": ["ES2020"],
-    "sourceMap": true,
     "types": ["node"],
     "rootDir": "src",
     "outDir": "out/client",
