--- a/packages/backstage-entity-language-server/package.json
+++ b/packages/backstage-entity-language-server/package.json
@@ -4,6 +4,9 @@
   "author": "",
   "license": "ISC",
   "publisher": "backstage",
+  "backstage": {
+    "role": "node-library"
+  },
   "description": "",
   "activationEvents": [
     "onLanguage:backstage-entity"
@@ -14,8 +17,7 @@
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -b",
-    "watch": "tsc -b -w",
-    "lint": "eslint ./client/src ./server/src --ext .ts,.tsx"
+    "watch": "tsc -b -w"
   },
   "dependencies": {
     "@backstage/catalog-model": "^1.4.3",
@@ -28,7 +30,9 @@
     "typescript": "^5.2.2",
     "vscode-languageserver": "^9.0.1",
     "vscode-languageserver-textdocument": "^1.0.11",
-    "vscode-uri": "^3.0.8"
+    "vscode-languageserver-types": "^3.17.5",
+    "vscode-uri": "^3.0.8",
+    "yaml": "^2.3.4"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.199"
