--- a/packages/vscode-backstage-entity/package.json
+++ b/packages/vscode-backstage-entity/package.json
@@ -7,6 +7,9 @@
   "engines": {
     "vscode": "^1.83.0"
   },
+  "backstage": {
+    "role": "node-library"
+  },
   "scripts": {
     "watch:client": "tsc -b -w",
     "watch:server": "tsc -b ../backstage-entity-language-server/tsconfig.client.json -w"
@@ -43,12 +46,23 @@
     ]
   },
   "dependencies": {
-    "typescript": "^5.2.2",
+    "@backstage/cli": "^0.24.0",
+    "typescript": "~5.2.0",
     "vscode-languageclient": "^9.0.1",
     "yaml": "^2.3.2"
   },
   "devDependencies": {
+    "@flatten-js/interval-tree": "^1.1.1",
+    "@types/lodash": "^4.14.199",
     "@types/node": "^20.8.4",
-    "@types/vscode": "^1.83.0"
+    "@types/vscode": "^1.83.0",
+    "ajv": "^8.12.0",
+    "ajv-error-mapping": "workspace:^",
+    "glob": "^10.3.10",
+    "lodash": "^4.17.21",
+    "vscode-languageserver": "^9.0.1",
+    "vscode-languageserver-textdocument": "^1.0.11",
+    "vscode-languageserver-types": "^3.17.5",
+    "vscode-uri": "^3.0.8"
   }
 }
