--- a/packages/vscode-backstage-entity/.vscode/tasks.json
+++ b/packages/vscode-backstage-entity/.vscode/tasks.json
@@ -8,31 +8,7 @@
     },
     {
       "type": "npm",
-      "script": "compile",
-      "group": "build",
-      "presentation": {
-        "panel": "dedicated",
-        "reveal": "never"
-      },
-      "problemMatcher": ["$tsc"]
-    },
-    {
-      "type": "npm",
-      "script": "watch:client",
-      "isBackground": true,
-      "group": {
-        "kind": "build",
-        "isDefault": true
-      },
-      "presentation": {
-        "panel": "dedicated",
-        "reveal": "never"
-      },
-      "problemMatcher": ["$tsc-watch"]
-    },
-    {
-      "type": "npm",
-      "script": "watch:server",
+      "script": "watch",
       "isBackground": true,
       "group": {
         "kind": "build",
