update to use yarn 3
Signed-off-by: Aramis <sennyeyaramis@gmail.com>

--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "entity:build": "yarn --cwd packages/vscode-backstage-entity build",
     "entity:watch": "yarn --cwd packages/vscode-backstage-entity watch"
   },
-  "workspaces": [
-    "packages/*"
-  ],
-  "packageManager": "yarn@4.0.0",
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ]
+  },
+  "packageManager": "yarn@3.2.3",
   "devDependencies": {
     "@spotify/eslint-config-typescript": "^15.0.0",
     "@types/eslint": "^8",
