--- a/packages/backstage-entity-language-server/package.json
+++ b/packages/backstage-entity-language-server/package.json
@@ -4,6 +4,7 @@
   "author": "",
   "license": "ISC",
   "publisher": "backstage",
+  "private": true,
   "backstage": {
     "role": "node-library"
   },
@@ -20,9 +21,12 @@
   },
   "dependencies": {
     "@backstage/catalog-model": "^1.4.3",
+    "@backstage/errors": "^1.2.3",
     "@flatten-js/interval-tree": "^1.1.1",
+    "@types/git-url-parse": "^9.0.3",
     "ajv": "^8.12.0",
     "ajv-error-mapping": "workspace:^",
+    "git-url-parse": "^14.0.0",
     "glob": "^10.3.10",
     "json-schema-traverse": "^1.0.0",
     "lodash": "^4.17.21",
@@ -35,5 +39,6 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.199"
-  }
+  },
+  "packageManager": "yarn@3.2.3"
 }
