--- a/packages/vscode-backstage-entity/package.json
+++ b/packages/vscode-backstage-entity/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backstage-entity",
+  "name": "vscode-backstage-entity",
   "publisher": "backstage",
   "displayName": "vscode-backstage-entity",
   "description": "Language support for Backstage entity files, beyond just YAML.",
@@ -58,7 +58,6 @@
     "@types/node": "^20.8.4",
     "@types/vscode": "^1.83.0",
     "ajv": "^8.12.0",
-    "ajv-error-mapping": "workspace:^",
     "esbuild": "^0.19.9",
     "glob": "^10.3.10",
     "lodash": "^4.17.21",
