--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,6 +4,6 @@ httpTimeout: 300000
 
 nodeLinker: node-modules
 
-npmRegistryServer: "https://registry.npmjs.org/"
+npmRegistryServer: 'https://registry.npmjs.org/'
 
 yarnPath: .yarn/releases/yarn-3.2.3.cjs
