--- a/packages/ajv-error-mapping/package.json
+++ b/packages/ajv-error-mapping/package.json
@@ -2,6 +2,9 @@
   "name": "ajv-error-mapping",
   "version": "0.0.0",
   "license": "MIT",
+  "backstage": {
+    "role": "node-library"
+  },
   "private": true,
   "exports": {
     ".": "./src/index.ts",
